--- a/src/index.html
+++ b/src/index.html
@@ -45,40 +45,7 @@
           <div class="nav__menu__item">
             <a href="sign-up.html">Sign Up</a>
           </div>
-        </div>
-        <div class="nav__mobile__menu">
-          <div class="mobile_menu_btn">
-            <svg
-              width="60px"
-              height="25px"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M4 18L20 18"
-                stroke="#000000"
-                stroke-width="1.5"
-                stroke-linecap="round"
-              />
-              <path
-                d="M4 12L20 12"
-                stroke="#000000"
-                stroke-width="1.5"
-                stroke-linecap="round"
-              />
-              <path
-                d="M4 6L20 6"
-                stroke="#000000"
-                stroke-width="1.5"
-                stroke-linecap="round"
-              />
-            </svg>
-          </div>
-        </div>
-        <div class="nav__icons">
           <form>
-           
             <input
               type="text"
               placeholder="What are you looking for?"
@@ -101,7 +68,33 @@
               </svg>
             </button>
           </form>
-        
+        </div>
+
+        <div class="nav__icons">
+          <form>
+            <input
+              type="text"
+              placeholder="What are you looking for?"
+              name="search"
+            />
+            <button class="hoveredicon">
+              <svg
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17 17L13.2223 13.2156M15.3158 8.15789C15.3158 10.0563 14.5617 11.8769 13.2193 13.2193C11.8769 14.5617 10.0563 15.3158 8.15789 15.3158C6.2595 15.3158 4.43886 14.5617 3.0965 13.2193C1.75413 11.8769 1 10.0563 1 8.15789C1 6.2595 1.75413 4.43886 3.0965 3.0965C4.43886 1.75413 6.2595 1 8.15789 1C10.0563 1 11.8769 1.75413 13.2193 3.0965C14.5617 4.43886 15.3158 6.2595 15.3158 8.15789V8.15789Z"
+                  stroke="black"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </button>
+          </form>
+
           <div class="nav__icons__end">
             <div class="to__wish__list__btn">
               <a href="wish-list.html" class="hoveredicon">
@@ -162,9 +155,176 @@
                 </svg>
               </a>
             </div>
+            <div class="burger__menu hoveredicon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
     </nav>
+    <header>
+      <div class="container">
+        <div class="header__menu">
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Woman’s Fashion</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Men’s Fashion</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Electronics</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Home & Lifestyle</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Medicine</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Sports & Outdoor</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Baby’s & Toys</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Groceries & Pets</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="header__menu__item hoveredicon">
+            <a href="#">Health & Beauty</a>
+            <div class="header__menu__item__open">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.95 11.636L8 6.68597L9.414 5.27197L15.778 11.636L9.414 18L8 16.586L12.95 11.636Z"
+                  fill="black"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="header__slider">
+          <img src="img/slider.jpg" alt="slider" />
+        </div>
+      </div>
+    </header>
   </body>
 </html>
